# networkd-connectivity

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
conf/: connectivity-dispatcher
debian/: changelog  control  copyright  networkd-connectivity-hooks.dirs  networkd-connectivity-hooks.install  networkd-connectivity-hooks.links  networkd-connectivity-snmp.install  networkd-connectivity.install  not-installed  python3-networkd-connectivity.dirs  python3-networkd-connectivity.install  routemon-dispatcher-hooks.install  routemon-dispatcher.dirs  routemon-dispatcher.install  rules
hooks/: metric_hook.py
routemon/: ddclient.sh  routemon-dispatcher.py
snmp/: NETWORKD-CONNECTIVITY-MIB.txt  agentx-connectivity.py
src/networkd_connectivity/: __init__.py  cli.py  daemon.py  dispatcher.py  io.github.russdill.networkd_connectivity.conf
src/networkd_connectivity/_resources/: README.md
src/networkd_connectivity/_resources/conf/: routemon-dispatcher
src/networkd_connectivity/_resources/snmp/: NETWORKD-CONNECTIVITY-MIB.txt
src/networkd_connectivity/_resources/systemd/: agentx-connectivity.service  connectivity-dispatcher.service  connectivity-monitord@.service  routemon-dispatcher.service
src/networkd_connectivity/_resources/sysusers/: networkd-connectivity.conf
src/networkd_connectivity/routemon/: routemon_dispatcher.py
src/networkd_connectivity/snmp/: agentx_connectivity.py
systemd/: agentx-connectivity.service  connectivity-monitord@.service
